Update clipseg repo and use new refined model

--- a/repositories/clipseg/Quickstart.ipynb
+++ b/repositories/clipseg/Quickstart.ipynb
@@ -9,6 +9,8 @@
     "import torch\n",
     "import requests\n",
     "\n",
+    "! wget https://owncloud.gwdg.de/index.php/s/ioHbRzFx6th32hn/download -O weights.zip\n",
+    "! unzip -d weights -j weights.zip\n",
     "from models.clipseg import CLIPDensePredT\n",
     "from PIL import Image\n",
     "from torchvision import transforms\n",
